fix theme visiblity

--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,8 @@
     --rim2:   #e8ddd0;
 
     --ink:  #1c1209;
-    --ink2: #6b4f38;
-    --ink3: #a8836a;
+    --ink2: #5a3f2a;
+    --ink3: #7a5840;
 
     --kcal:    #9a6800;
     --protein: #1c7a18;
@@ -62,14 +62,14 @@
 
   .dark {
     --base:   #0d0a07;
-    --panel:  #181210;
-    --panel2: #1f1710;
-    --rim:    #382819;
-    --rim2:   #231a10;
+    --panel:  #211810;
+    --panel2: #2a1f14;
+    --rim:    #4a3520;
+    --rim2:   #332618;
 
     --ink:  #f0e6d8;
-    --ink2: #9b7d60;
-    --ink3: #52382a;
+    --ink2: #c89a78;
+    --ink3: #a07858;
 
     --kcal:    #e8a54e;
     --protein: #7dcc78;
